[gd_scene load_steps=10 format=3 uid="uid://ctkc6ibu78yaa"]

[ext_resource type="Texture2D" uid="uid://btgppyrb6liui" path="res://art/asteroids/asteroid_8.png" id="1_nigor"]
[ext_resource type="Script" path="res://scripts/asteroid.gd" id="1_nstev"]
[ext_resource type="Texture2D" uid="uid://cro0wgjx8kkxs" path="res://art/asteroids/asteroid_1.png" id="2_2b271"]
[ext_resource type="Texture2D" uid="uid://bdjtc2btr84jd" path="res://art/asteroids/asteroid_2.png" id="3_aeawc"]
[ext_resource type="Texture2D" uid="uid://ctk33sn1lsbak" path="res://art/asteroids/asteroid_3.png" id="4_31ri6"]
[ext_resource type="Texture2D" uid="uid://txr6yq1b8b8o" path="res://art/asteroids/asteroid_4.png" id="5_2gyko"]
[ext_resource type="Texture2D" uid="uid://cluoj2so12fhw" path="res://art/asteroids/asteroid_5.png" id="6_2ydt1"]
[ext_resource type="Texture2D" uid="uid://du42pahc3jk47" path="res://art/asteroids/asteroid_6.png" id="7_yi81f"]
[ext_resource type="Texture2D" uid="uid://dj6wcjl3ayy22" path="res://art/asteroids/asteroid_7.png" id="8_mmifu"]

[node name="asteroid" type="RigidBody2D" groups=["dangers"]]
gravity_scale = 0.0
script = ExtResource("1_nstev")
metadata/_edit_group_ = true

[node name="sprite_1" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_2b271")

[node name="collision_1" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-41, -6, -16, -2, -17, 4, -42, 6, -48, 30, -23, 44, 9, 45, 36, 36, 42, 2, 40, -32, 1, -43, -35, -33)

[node name="sprite_2" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_aeawc")

[node name="collision_2" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-45, -12, -34, -21, 16, -26, 41, -20, 46, -3, 35, 15, 23, 19, -26, 19)

[node name="sprite_3" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_31ri6")

[node name="collision_3" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1, -46, 28, -33, 39, -18, 40, 11, 19, 28, 2, 28, -12, 39, -37, 17, -33, 1, -35, -16, -26, -34)

[node name="sprite_4" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_2gyko")

[node name="collision_4" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -38, 11, -36, 32, -27, 44, -17, 45, -5, 36, 14, 17, 19, 10, 12, 14, 20, 9, 24, -12, 26, -32, 23, -40, 18, -44, 10, -42, -7, -31, -22, -13, -33)

[node name="sprite_5" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_2ydt1")

[node name="collision_5" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-43, -8, -38, -23, -24, -34, -5, -39, 7, -39, 26, -36, 46, -21, 46, -7, 37, 14, 2, 32, 2, 39, -15, 38, -28, 22, -30, 2)

[node name="sprite_6" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_yi81f")

[node name="collision_6" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(20, -38, 29, -35, 31, -24, 31, 13, 19, 38, -5, 47, -34, 39, -46, 21, -41, -4, -16, -21, 13, -33)

[node name="sprite_7" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_mmifu")

[node name="collision_7" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1, -13, 6, -26, 25, -38, 38, -32, 42, -9, 30, 19, 9, 32, -12, 39, -24, 33, -30, 17, -41, 5, -45, -7, -38, -14, -20, -15)

[node name="sprite_8" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_nigor")

[node name="collision_8" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(10, -49, 40, -44, 47, -22, 48, 3, 43, 30, 20, 44, -6, 48, -24, 37, -29, 18, -42, -7, -46, -24, -34, -43, -10, -49)
